--- a/65.html
+++ b/65.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>随机数生成器与目标值匹配</title>
+    <title>656565</title>
     <style>
         * {
             margin: 0;
@@ -264,8 +264,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎲 随机数生成器与目标值匹配</h1>
-            <p>三种熵源生成随机数并查找目标值</p>
+            <h1>🎲 从概率中找到65</h1>
+            <p>三种熵源生成随机数并查找给定数字</p>
         </div>
 
         <div class="controls">
@@ -280,7 +280,7 @@
                 </div>
                 <div class="input-field">
                     <label for="target">目标值</label>
-                    <input type="text" id="target" value="12345678" placeholder="输入要查找的数字">
+                    <input type="text" id="target" value="65" placeholder="输入要查找的数字">
                 </div>
             </div>
 
